fix spilling mistakes

--- a/assets/css/custom-new-style.css
+++ b/assets/css/custom-new-style.css
@@ -246,25 +246,25 @@ html[dir="rtl"] .growth__box .content p {
 /* CSS used here will be applied after bootstrap.css */
 /* custom checkboxes */
 /***** RADIO BUTTON STYLES *****/
-.rdio {
+.radio {
   position: relative;
 }
-.rdio input[type="radio"] {
+.radio input[type="radio"] {
   opacity: 0;
 }
-.rdio label {
+.radio label {
   padding-left: 10px;
   cursor: pointer;
   margin-bottom: 7px !important;
   font-size: 14px;
 }
 
-.rdio label {
+.radio label {
   padding-left: unset;
   padding-right: 10px;
 }
 
-.rdio label:before {
+.radio label:before {
   width: 18px;
   height: 18px;
   position: absolute;
@@ -279,21 +279,21 @@ html[dir="rtl"] .growth__box .content p {
   background: #fff;
 }
 
-html[dir="rtl"] .rdio label:before {
+html[dir="rtl"] .radio label:before {
   left: unset;
   right: 0;
 }
 
-.rdio input[type="radio"] {
+.radio input[type="radio"] {
   margin: 0px;
 }
-.rdio input[type="radio"]:disabled + label {
+.radio input[type="radio"]:disabled + label {
   color: #999;
 }
-.rdio input[type="radio"]:disabled + label:before {
+.radio input[type="radio"]:disabled + label:before {
   background-color: #fbc52d;
 }
-.rdio input[type="radio"]:checked + label::after {
+.radio input[type="radio"]:checked + label::after {
   content: "";
   position: absolute;
   top: 5px;
@@ -308,19 +308,19 @@ html[dir="rtl"] .rdio label:before {
   border-radius: 50px;
 }
 
-html[dir="rtl"] .rdio input[type="radio"]:checked + label::after {
+html[dir="rtl"] .radio input[type="radio"]:checked + label::after {
   left: unset;
   right: 4px;
 }
 
-.rdio-default input[type="radio"]:checked + label:before {
+.radio-default input[type="radio"]:checked + label:before {
   border-color: #fbc52d;
 }
 
-.rdio-primary input[type="radio"]:checked + label:before {
+.radio-primary input[type="radio"]:checked + label:before {
   border-color: #fbc52d;
 }
-.rdio-primary input[type="radio"]:checked + label::after {
+.radio-primary input[type="radio"]:checked + label::after {
   background-color: #fbc52d;
 }
 
