--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -611,7 +611,7 @@ questions
     &-img{ width: 100%;
       &::before{ transform: scale(.8) translate(-50%,0); top: 0; left: 40%; }
     }
-    #accordion{ padding: 0 2rem; margin-top: 5rem; }
+    #accoradion{ padding: 0 2rem; margin-top: 5rem; }
   }
   @media (max-width: 767.98px) {
     &__wrapper{ width: calc(100% - 5rem); padding: 5rem 2rem; }
@@ -620,7 +620,7 @@ questions
     }
   }
   @media (max-width: 575.98px) {
-    #accordion{ padding: 0 1rem; }
+    #accoradion{ padding: 0 1rem; }
     .card{
       &-header{ width: 100%; font-size: 1.2rem;
         h5{ width: 100%; font-size: 1.2rem;
